Committing new enhanced servo code, enabling speed control between servo position transitions.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=XLR8Servo
-version=2.0.0
+version=1.2.0
 author=Alorium Technology
 maintainer=Alorium Technology <info@aloriumtech.com>
 sentence=Allows Arduino boards to control a variety of servo motors. For Alorium Technology's XLR8 board.
-paragraph=It uses a set of dedicated custom hardware timers instead of the microcontroller's timer. The library can control up to 20 servos accurately without relying on microcontroller interrupt handling. For board images from package 1.8.1 and older or the XLR8 Legacy image, please use the 1.1.0 version of the XLR8Servo library.
+paragraph=It uses a set of dedicated custom hardware timers instead of the microcontroller's timer. The library can control up to 20 servos accurately without relying on microcontroller interrupt handling.<br />
 category=Device Control
 url=https://github.com/AloriumTechnology/XLR8Servo
 architectures=avr
